tests/unit-fail-compilation/dup_params1.c
int f(int x, int x) {
      return x;
}

int main(void) {
      return f(0, 0);
}
